--- a/frontend/goals.html
+++ b/frontend/goals.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="goals-page">
     <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
         <div class="container-fluid justify-content-between">
             <a class="navbar-brand" href="/">NutriTrack</a>
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <h1><b>My Nutrition & Fitness Goals</b></h1>
+    <h1 class="page-heading"><b>Nutrition & Fitness Goals</b></h1>
     <div class="container mt-4">
         <div id="feedbackAlert" class="alert alert-success d-none" role="alert"></div>
         <div class="row">
