--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
 <body class="index-page">
     <nav class="navbar navbar-expand-lg navbar-light bg-light w-100 m-0">
         <div class="container-fluid justify-content-between">
-            <a class="navbar-brand" href="">NutriTrack</a>
+            <a class="navbar-brand" href="/">NutriTrack</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <h1><b>Dashboard</b></h1>
+    <h1 class="page-heading"><b>Dashboard</b></h1>
 
     <div class="container">
         <!-- left side -->
