--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -10,39 +10,47 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
-    body {
-      font-family: Arial, sans-serif;
+    html, body {
+      height: 100%;
       margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      overflow: hidden;
+    }
+
+    .page-content {
+      flex: 1;
       display: flex;
       flex-direction: column;
       align-items: center;
+      overflow-y: auto;
     }
 
-    h1 {
-      color: #2c3e50;
-      margin-bottom: 20px;
-      width: 100%;
-      text-align: center;
+    .container-fluid.main-container {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 1rem;
+      height: calc(100vh - 80px);
     }
 
     .card {
       border: none;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      margin-bottom: 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      margin-bottom: 1rem;
     }
 
     .card-header {
-      padding: 12px 20px;
+      padding: 0.75rem 1rem;
+    }
+
+    .card-body {
+      padding: 1rem;
     }
 
     .btn {
-      border-radius: 4px !important;
+      border-radius: 4px;
       font-weight: 500;
-    }
-
-    .progress {
-      height: 10px;
-      border-radius: 5px;
     }
 
     .form-control {
@@ -51,7 +59,13 @@
 
     #feedbackAlert {
       width: 100%;
-      margin-bottom: 20px;
+      margin-bottom: 1rem;
+    }
+
+    @media (max-width: 768px) {
+      .row.flex-nowrap {
+        flex-direction: column !important;
+      }
     }
   </style>
 </head>
@@ -85,33 +99,34 @@
       </div>
     </div>
   </nav>
-  <h1><b>User Profile</b></h1>
-  <div class="container mt-4">
+
+  <h1 class="page-heading"><b>User Profile</b></h1>
+  <div class="container-fluid main-container">
     <div id="feedbackAlert" class="alert alert-success d-none" role="alert"></div>
-    <div class="row">
+    <div class="row gx-3 gy-2 flex-nowrap">
       <div class="col-md-6">
-        <div class="card mb-4">
+        <div class="card h-100">
           <div class="card-header bg-primary text-white">
-            <h5 class="mb-0">Profile Information</h5>
+            <h6 class="mb-0">Profile Information</h6>
           </div>
           <div class="card-body">
-            <div class="mb-3">
+            <div class="mb-2">
               <label class="form-label">Username</label>
-              <div class="input-group mb-3">
+              <div class="input-group">
                 <span class="input-group-text"><i class="fas fa-user"></i></span>
                 <input type="text" class="form-control" id="profileUsername" value="Loading..." readonly>
               </div>
             </div>
-            <div class="mb-3">
+            <div class="mb-2">
               <label class="form-label">Daily Calorie Target</label>
-              <div class="input-group mb-3">
+              <div class="input-group">
                 <span class="input-group-text"><i class="fas fa-bullseye"></i></span>
                 <input type="text" class="form-control" id="profileTarget" value="Loading..." readonly>
               </div>
             </div>
-            <div class="mb-3">
+            <div class="mb-2">
               <label class="form-label">Total Foods Logged</label>
-              <div class="input-group mb-3">
+              <div class="input-group">
                 <span class="input-group-text"><i class="fas fa-utensils"></i></span>
                 <input type="text" class="form-control" id="profileLogCount" value="Loading..." readonly>
               </div>
@@ -119,58 +134,64 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6">
+
+      <div class="col-md-6 d-flex flex-column gap-2">
         <div class="card">
           <div class="card-header bg-success text-white">
-            <h5 class="mb-0">Update Profile</h5>
+            <h6 class="mb-0">Update Profile</h6>
           </div>
           <div class="card-body">
             <form id="profileForm">
-              <div class="mb-3">
+              <div class="mb-2">
                 <label for="weight" class="form-label">Weight (lbs)</label>
-                <div class="input-group mb-3">
+                <div class="input-group">
                   <span class="input-group-text"><i class="fas fa-weight"></i></span>
                   <input type="number" step="0.1" id="weight" class="form-control" placeholder="e.g. 150">
                 </div>
               </div>
-              <div class="mb-3">
+              <div class="mb-2">
                 <label for="height" class="form-label">Height (inches)</label>
-                <div class="input-group mb-3">
+                <div class="input-group">
                   <span class="input-group-text"><i class="fas fa-ruler-vertical"></i></span>
                   <input type="number" step="0.1" id="height" class="form-control" placeholder="e.g. 70">
                 </div>
               </div>
-              <div class="mb-4">
+              <div class="mb-2">
                 <label class="form-label">BMI Status</label>
                 <div class="input-group">
                   <span class="input-group-text"><i class="fas fa-calculator"></i></span>
                   <input type="text" class="form-control" id="bmiValue" value="N/A" readonly>
                 </div>
               </div>
-              <button type="submit" class="btn btn-success w-100">Update Profile</button>
+              <button type="submit" class="btn btn-success w-100 mt-2">Update Profile</button>
             </form>
           </div>
         </div>
-        <div class="card mt-4">
+
+        <div class="card flex-grow-1">
           <div class="card-header bg-info text-white">
-            <h5 class="mb-0">Health Insights</h5>
+            <h6 class="mb-0">Health Insights</h6>
           </div>
           <div class="card-body">
-            <div class="mb-3">
-              <p><strong>BMI Category:</strong> <span id="bmiCategory">Not calculated</span></p>
-              <div class="progress">
-                <div id="bmiProgressBar" class="progress-bar bg-info" role="progressbar" style="width: 0%"
-                  aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
+            <p class="mb-1"><strong>BMI Category:</strong> <span id="bmiCategory">Not calculated</span></p>
+            <div class="progress mb-2">
+              <div id="bmiProgressBar" class="progress-bar bg-info" role="progressbar" style="width: 0%"
+                aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-            <p class="text-muted small">A healthy BMI typically ranges from 18.5 to 24.9. This is just one health
-              indicator and should be considered alongside other factors.</p>
+            <p class="text-muted small mb-0">A healthy BMI is 18.5 - 24.9. This is one of many health indicators.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/static/main.js"></script>
+  <script src="/static/profile.js"></script>
+</body>
+
+</html>
+
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
       const token = localStorage.getItem("token");
